fixup spacings on home page; start map page with header

--- a/home.css
+++ b/home.css
@@ -3,7 +3,7 @@ body {
 }
 
 .head-bar {
-	height: 25%;
+	height: 10%;
 	text-align: center;
 	color: white;
 	background-color: #41B7F2;
@@ -15,6 +15,7 @@ body {
 	color: #41B7F2;
 	font-size: 200%;
 	border: 2px solid black;
-	margin: 3%;
+	margin: 20% 5% 20% 5%;
+	padding: 5% 0%;
 	border-radius: 25px;
 }
